kubernetes/apps/hail-mary/flux-system/github-webhook/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - fluxhook-lab.bwees.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
